???? 0.10.0.3

15/2/2015 0.10.0.2
    user visible changes, admin:
    * removed --acl when uploading to S3.

    programmer visible changes:
    * Re-added missing line in upload code

15/2/2015 0.10.0.0
    user visible changes, client:
    * Support for S3 secure downloads.
    * New command translate_url for testing the creation of secure s3 urls.

    programmer visible changes:
    * Global variable var_stack is now imported as itself rather as var_list to avoid cross import problems.
    * ConnectionBase class and derived classes ConnectionHTTP and ConnectionS3 handle secure connection issues.

28/1/2015 0.9.19.4
    user visible changes, client:
    * When writing echo's to log the log file is created in the begin sections and permissions are set to 666 so later launches of instl can append to log.
    * For many files that are created during instl run permissions are set to 666.
    * Moved  the curl config file to a local directory instead of being in the bookkeeping directory.
    * Fixed echo function on Mac - it was missing quotes.
    * New default __USER_CONFIG_FILE_PATH__: $(__USER_HOME_DIR__)/$(__USER_CONFIG_FILE_NAME__)
    * Added bash function resolve_symlinks (Mac only).
    * Moved resolving symlink files to the target folder.
    * In gui mode send window to front (Mac only).
    * Fixed removing of split wtar files (...wtar.aa, ...).
    * During create_copy_instructions, read NEW_HAVE_INFO_MAP_PATH and not HAVE_INFO_MAP_PATH.
        Copy might be called after the sync batch file was created but before it was executed.
        HAVE_INFO_MAP_PATH is only created when the sync batch file is executed.

    programmer visible changes:
    * BatchAccumulator new sections: begin happens after pre & assign and before links
    * ConfigVarList.__resolve_stack is now a class member.
    * ConfigVarList.resolve, when joining values will not join None values.

    user visible changes, admin: