@@ -34,8 +34,6 @@ BASE_REPO_REV: 1
 LAST_PROGRESS: 0
 
 PROGRESS_STACCATO_PERIOD: 128
-# max file size 5 * 1024 * 1024
-MAX_FILE_SIZE: 5242880
 
 # s3 urls are created with expiration time in seconds
 # 60*60*24 = 86400 = 24 hours
